# cosine-prism

./: .gitignore  README.md  demo-1.ipynb  pmdct.py  procedure.drawio  pyproject.toml  random.json
cosine_prism/: MDCT Folding  Process Diagram  ctable.py  dct.ipynb  dct_static.py  encode.py  imdiff.py  mdct_static.py  oklab.py  palereplace.py  palette.py  palette_replace.py  quant_tables.py  uncorrelate.py
experiments/2lap/: 2lap.ipynb
experiments/3lap/: 3lap.ipynb  readme.md
experiments/blank/: blank.ipynb
experiments/dct_basis/: basis.ipynb
experiments/dct_negative/: negative.ipynb
experiments/dwt/: dwt.ipynb
experiments/edge/: edge.ipynb
experiments/loop_mdct/: loop_dct.ipynb  loop_mdct.ipynb  loop_mdct_simple.ipynb  mdct-compare.ipynb  old_loop_mdct.ipynb
experiments/mdct_nc/: mdct_nc.ipynb  readme.md
experiments/mdct_strategy_compare/: readme.md
experiments/multicolor/: check.ipynb  dct_quant_oklab.ipynb  dqt.py  oklab.py  xyb.py
experiments/roundoff/: roundoff.ipynb
images/: photo-1673265978318-508dec4c85b4?ixlib=rb-4.0.3&dl=planet-volumes-0cTUvNdlpPg-unsplash.jpg&q=80&fm=jpg&crop=entropy&cs=tinysrgb
old exp/: comp_dct_mdct.ipynb  cyclic-mdct.ipynb  demo-0-poc.ipynb  demo-1-save.ipynb  demo-3-sequential.ipynb  demo-4-lapped.ipynb  demo-5-gaborish.ipynb  demo-6-double-dct.ipynb  demo-mdct-horiz.ipynb  demo-mdct-save.ipynb  demo-mdct-tf.ipynb  demo-mdct.ipynb  explore-mdct.ipynb  mdct-compare.ipynb  mdct.ipynb  mdct4.ipynb  quant_dct.ipynb  quant_mdct.ipynb  quant_mdct_backup.ipynb  tensol.ipynb  test-tf.ipynb
tests/: test_cosine_prism.py
(+22 files in other folders)
