[tool.poetry]
name = "cosine-prism"
version = "0.1.0"
description = ""
authors = ["Aravind Reddy V <zerodividedby0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
scipy = "^1.9.3"
matplotlib = "^3.6.1"
jupyterlab = "^3.5.0"
mdct = "^0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
mypy = "^0.961"
pylama = "^8.3.8"
grip = "^4.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = numpy.typing.mypy_plugin